# hw_2

./: .gitignore  CMakeLists.txt  README.md  catch.hpp  dynamic_main.c  main.c  static_main.c  tests.cpp
.circleci/: config.yml
calculus/: CMakeLists.txt  types.h
calculus/include/: compute_distance.h
calculus/src/: compute_distance.c
dynamic/: CMakeLists.txt  tests.cpp
dynamic/include/: compute_distance.h  dynamic.h
dynamic/src/: compute_distance.c  dynamic.c
staticLib/: CMakeLists.txt  catch.hpp  tests.cpp  types.h
staticLib/include/: compute_distance.h  static.h
staticLib/src/: compute_distance.c  static.c
